--- a/GITTaak2CSS.css
+++ b/GITTaak2CSS.css
@@ -1,20 +1,39 @@
-img {
-    position: absolute;
-    top: 20px;
-    left: 20px;
-    height: 100px
+
+nav {
+    display: flex;
 }
 
-.NAV
-{
-    float: left;
+nav > div {
+    width: 33%;
+    text-align: center;
+}
 
-    width: 31%
+ img {
+    width: 30%;
+}
+
+.midden
+{
+    font-size: 14px;
+    text-decoration: none;
+    color: white;
+}
+.midden
+{
+
+    list-style-type: none;
+    display: flex;
+    gap: 20px;
+    justify-content: center;
 }
 
 
-.Navigatie
-{
-    Height: 200px
 
+
+
+html, body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
 }
